tests/specs/npm/pkg_json_imports/check.out
Check [WILDCARD]main.ts
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value: string = add(1, 2);
      ~~~~~
    at file:///[WILDLINE]/main.ts:3:7

error: Type checking failed.
